# super-oda-temizleyici

./: .gitignore  README.md  benimmap123.pgm  benimmap123.yaml
room_cleaner/: CMakeLists.txt  README.md  package.xml
room_cleaner/config/: params.yaml
room_cleaner/launch/: explore_mapping.launch  room_cleaner.launch
room_cleaner/maps/: my_map.pgm  my_map.yaml
room_cleaner/src/: cleaning_manager.py  map_monitor.py  report_manager.py
room_cleaner/world/: benimev2.world
src/turtlebot3_cleaning/: CMakeLists.txt  README.md  package.xml
src/turtlebot3_cleaning/config/: mission.yaml
src/turtlebot3_cleaning/include/turtlebot3_cleaning/: task_manager_node.h
src/turtlebot3_cleaning/launch/: autonomous_mapping.launch  mission.launch  navigation.launch  sim.launch  slam.launch  slam_toolbox.launch  task_manager.launch
src/turtlebot3_cleaning/maps/: map.pgm  map.yaml
src/turtlebot3_cleaning/models/: qr_code_models.xacro
src/turtlebot3_cleaning/models/materials/scripts/: qr_codes.material
src/turtlebot3_cleaning/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/turtlebot3_cleaning/scripts/: auto_recovery.py  generate_qrs.py  mission_manager_node.py  qr_detector_node.py  waypoint_navigator_node.py
src/turtlebot3_cleaning/src/: qr_reader_node.cpp  task_manager_node.cpp
