<?xml version="1.0"?>
<package format="2">
  <name>room_cleaner</name>
  <version>1.0.0</version>
  <description>TurtleBot3 için otonom haritalama</description>
  <maintainer email="231229076@ktun.edu.tr">Test</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Çalışma zamanı bağımlılıkları (Runtime dependencies) -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>

</package>
